add social media link

--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
             <div class="card" id="project">
                 <h2 class="card-title" align="center">Current Project</h2>
                 <p class="card-content">
-                    <i class="fas fa-link"></i> <a href="#">https://nulisblog.com</a><br/>
+                    <i class="fas fa-link"></i> <a href="https://nulisblog.com" target="_blank">https://nulisblog.com</a><br/>
                     <small>Writer - Since 2018</small>
                 </p>
                 <p class="card-content">
@@ -110,7 +110,7 @@
                     <small>Writer - Since 2019</small>
                 </p>
                 <p class="card-content">
-                    <i class="fas fa-link"></i> <a href="#">https://ozan.web.id</a><br/>
+                    <i class="fas fa-link"></i> <a href="https://ozan.web.id" title="Ozan Blog" target="_blank">https://ozan.web.id</a><br/>
                     <small>Just sharing my opinion</small>
                 </p>
             </div>
@@ -130,10 +130,10 @@
     <div class="container">
         <div class="grid-footer">
             <div>
-            <a href="//github.com/OzanLab"><i class="fab fa-2x fa-github"></i></a>
-            <a href="//fb.me/OzanBlacknes"><i class="fab fa-2x fa-facebook-f"></i></a>
-            <a href="//instagram.com/OzanBlacknes"><i class="fab fa-2x fa-instagram"></i></a>
-            <a href="//twitter.com/OzanBlacknes"><i class="fab fa-2x fa-twitter"></i></a>
+            <a href="//github.com/OzanLab" title="OzanLab on Github" target="_blank"><i class="fab fa-2x fa-github"></i></a>
+            <a href="//fb.me/OzanBlacknes" title="OzanLab Facebook" target="_blank"><i class="fab fa-2x fa-facebook-f"></i></a>
+            <a href="//instagram.com/OzanBlacknes" title="OzanLab Instagram" target="_blank"><i class="fab fa-2x fa-instagram"></i></a>
+            <a href="//twitter.com/OzanBlacknes" title="OzanLab Twitter" target="_blank"><i class="fab fa-2x fa-twitter"></i></a>
             </div>
             
         </div>
