--- a/index.html
+++ b/index.html
@@ -57,7 +57,8 @@
                 <h2 class="card-title" align="center">About</h2>
                 <p class="card-content">
                     My name is Slamet Fauzan.<br/>
-                    I'm a Blogger and Programmer Freelance which have focused at web design
+                    I have no IT education background, but I love programming as much as I love you.<br> 
+                    <i><small>— Translated by Google</small></i>
                 </p>
             </div>
             
@@ -106,12 +107,12 @@
                     <small>Writer - Since 2018</small>
                 </p>
                 <p class="card-content">
-                    <i class="fas fa-link"></i> <a href="#">https://dukunkode.com</a><br/>
-                    <small>Writer - Since 2019</small>
-                </p>
-                <p class="card-content">
                     <i class="fas fa-link"></i> <a href="https://ozan.web.id" title="Ozan Blog" target="_blank">https://ozan.web.id</a><br/>
                     <small>Just sharing my opinion</small>
+                </p>
+                <p class="card-content">
+                    <i class="fas fa-link"></i> <a href="#">http://localhost</a><br/>
+                    <small>Comming Soon! XD</small>
                 </p>
             </div>
             <div class="card" id="contact">
@@ -131,9 +132,9 @@
         <div class="grid-footer">
             <div>
             <a href="//github.com/OzanLab" title="OzanLab on Github" target="_blank"><i class="fab fa-2x fa-github"></i></a>
-            <a href="//fb.me/OzanBlacknes" title="OzanLab Facebook" target="_blank"><i class="fab fa-2x fa-facebook-f"></i></a>
-            <a href="//instagram.com/OzanBlacknes" title="OzanLab Instagram" target="_blank"><i class="fab fa-2x fa-instagram"></i></a>
-            <a href="//twitter.com/OzanBlacknes" title="OzanLab Twitter" target="_blank"><i class="fab fa-2x fa-twitter"></i></a>
+            <a href="//fb.me/OzanLab" title="OzanLab Facebook" target="_blank"><i class="fab fa-2x fa-facebook-f"></i></a>
+            <a href="//instagram.com/ozan.zip" title="OzanLab Instagram" target="_blank"><i class="fab fa-2x fa-instagram"></i></a>
+            <a href="//twitter.com/OzanLab" title="OzanLab Twitter" target="_blank"><i class="fab fa-2x fa-twitter"></i></a>
             </div>
             
         </div>
